# RL-Launchpad

./: .gitignore  README.md  conftest.py  pyproject.toml
configs/: sb3_sac_her_push.yaml  sb3_td3_her_push.yaml  td3_her_pickplace.yaml  td3_her_push.yaml  td3_her_push_explore_probe.yaml  td3_her_push_ref_1m.yaml  td3_her_push_ref_probe.yaml  td3_her_reach.yaml  td3_noher_push.yaml
docs/: server-runs.md  walkthrough.md  writeup.md
results/: compute_table.md  final_eval.md
results/pickplace_td3_her_seed0/: checkpoint_best.pt  checkpoint_latest.pt  config.yaml  normalizer.npz  progress.csv
results/probe_explore_seed0/: checkpoint_best.pt  checkpoint_latest.pt  config.yaml
results/probe_ref_1m_seed0/: config.yaml
results/probe_ref_seed0/: config.yaml  normalizer.npz  progress.csv
results/probe_sb3_sac_seed0/: config.yaml  progress.csv
results/push_sb3_her_seed0/: progress.csv
results/push_td3_her_seed0/: checkpoint_best.pt  checkpoint_latest.pt  config.yaml  normalizer.npz  progress.csv
results/push_td3_noher_seed0/: checkpoint_best.pt  checkpoint_latest.pt  config.yaml  progress.csv
results/reach_smoke_seed0/: checkpoint_best.pt  checkpoint_latest.pt  config.yaml  progress.csv
scripts/: check_env.py  diagnose_push.py  final_eval.py  make_plots.py  record_video.py  run_all_seeds.sh  run_matrix_parallel.sh  setup_cluster.sh  submit_slurm_matrix.sh
src/agent/: evaluate.py  networks.py  normalizer.py  td3.py  (+2 more)
tests/: test_baseline.py  test_exploration.py  test_networks.py  test_normalizer.py  test_replay_buffer.py  test_td3.py  test_train_eval.py
(+9 files in other folders)
