[project]
name = "launchpad-rl"
version = "0.1.0"
description = "From-scratch TD3 + HER on Gymnasium-Robotics Fetch tasks — LaunchPad 2026 Griffin Labs RL track"
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch>=2.5",
    "numpy>=1.26",
    "gymnasium>=1.0",
    "gymnasium-robotics>=1.3",
    "mujoco>=3.2",
    "stable-baselines3>=2.4",
    "pyyaml>=6.0",
    "matplotlib>=3.9",
    "imageio[ffmpeg]>=2.36",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
# Exact versions are pinned in uv.lock (committed) — R3 reproducibility.
